crates/plotnik-lib/tests/02-parser/recovery_incomplete/type_name_invalid_token_after.txt
Q = (identifier) @name :: (
------------------ DIAGNOSTICS -------------------
error: expected a type name after `::`
 --> query.ptk:1:27
  |
1 | Q = (identifier) @name :: (
  |                           ^
  |
help: e.g., `::MyType`
